# Egyptian-Real-Estate-Pricing-Prediction

./: README.txt  egyptian_realestate_analysis-checkpoint.ipynb  main.py
Egyptian Real Estate Pricing Prediction/: LICENSE  Makefile  README.md  pyproject.toml
Egyptian Real Estate Pricing Prediction/docs/: mkdocs.yml
Egyptian Real Estate Pricing Prediction/docs/docs/: index.md
