[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "egyptian_real_estate_pricing_prediction"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Bryan Chen" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["egyptian_real_estate_pricing_prediction"]
include = ["pyproject.toml", "egyptian_real_estate_pricing_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["egyptian_real_estate_pricing_prediction"]
force-sort-within-sections = true

